# iiif-forager

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.yml  examples.http
.github/workflows/: rust.yml
sample/watergate/with_meta/: meta.json
src/: config.rs  context.rs  http_api.rs  iiif.rs  main.rs  meta.rs  metadata.rs
src/iiif/: annotations.rs  collections.rs  manifests.rs  metadata.rs  mod.rs  resources.rs  types.rs
src/image/: metadata.rs  mod.rs  png.rs  source.rs
