[package]
name = "iiif-presenter"
version = "0.1.0"
authors = ["Marcus Bitzl <marcus@bitzl.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
clap = "2.33.0"
png = "0.16.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.53"