[package]
name = "iiif-presenter"
version = "0.1.0"
authors = ["Marcus Bitzl <marcus@bitzl.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
clap = "2.33.0"
immeta = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.53"
serde_yaml = "0.8"
nom = "5.1.1"